# birichini_web

./: README.md  app.json  backup.py  biri.db  birichini - copia.db  birichini-20191005.db  birichini.db  birichini1.db  heroku.sh  productos_04_29_2023_124655  productos_05_11_2023_192552  productos_05_11_2023_193223  productos_05_12_2023_182807  productos_05_12_2023_184449  productos_05_31_2023_182212  productos_10_14_2020_192421  productos_10_14_2020_192429  productos_10_14_2020_192738  productos_10_14_2020_192926  productos_10_14_2020_192956  productos_10_14_2020_193056  pyproject.toml  requirements.txt  run.py
app/: __init__.py  models.py
app/home/: forms.py  views.py
app/static/css/: style.css
app/templates/: base.html  search.html
app/templates/home/alimentos/: alimento.html  alimentos.html  buscar.html  ean.html  stock.html
archivos/: ACCESORIOS.csv  ACCESORIOS.xlsx  Lista códigos EAN.xls  Lista stok.xlsx  Planilla stok.xlsx  data-1560959662257.csv  oldprince.csv  proplan.csv  royal.csv  stock.xlsx  stock_oldprince.csv  stock_proplan.csv  tio.py
instance/: config.py
migrations/versions/: 213c97e91bb3_.py  f5c57a8948af_.py
