[tool.poetry]
name = "birichini"
version = "0.1.0"
description = ""
authors = ["dgasch <diego.gasch@mercadolibre.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
pandas = "^1.5.2"
flask-sqlalchemy = "^3.0.2"
Flask-Migrate = "^4.0.0"
Flask-Bootstrap = "^3.3.7"
Flask-Excel = "^0.0.7"
Flask-Login = "^0.6.2"
XlsxWriter = "^3.0.3"
Flask-WTF = "^1.0.1"
tomlkit = "^0.11.6"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

